FELIX-2312: Support for ext and endorsed directories
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@939695 13f79535-47bb-0310-9956-ffa450edef68